# homepage

./: .clang-tidy  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  skaffold.yaml
.claude/: settings.json
.github/workflows/: build.yaml
kubernetes/cilium/: bgp.conf  bgpconfig.yaml  ciliumloadbalancerippool.yaml  kustomization.yaml
kubernetes/homepage/: deployment.yaml  envoy.yaml  ingress.yaml  kustomization.yaml  loadbalancer.yaml  namespace.yaml  service.yaml  test-pod.yaml
kubernetes/homepage/cloudflare-tls/: kustomization.yaml  tls.crt
scripts/: run-clang-tidy.sh
src/: health.rs  main.cpp  main.rs  metrics.rs  tls.rs  websocket.rs
src/controllers/: home_controller.cpp  home_controller.hpp  metrics_websocket.cpp  metrics_websocket.hpp
src/services/: metrics_service.cpp  metrics_service.hpp  metrics_service_linux.cpp  metrics_service_mac.cpp
src/templates/: index_template.hpp
src/utils/: config.cpp  config.hpp
templates/: index.html
