[package]
name = "homepage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-tungstenite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
minify-html = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tera = "1.20"